h3 align fix

--- a/src/index.scss
+++ b/src/index.scss
@@ -101,7 +101,7 @@ main {
   h3 {
     color: var(--text);
     font-size: 1.05rem;
-    align-self: end;
+    text-align: left;
   }
 
   h2, ul li, span, a, div {
